--- a/backend/package.json
+++ b/backend/package.json
@@ -30,11 +30,13 @@
     "@nestjs/platform-socket.io": "^11.1.3",
     "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.9.0",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "ioredis": "^5.6.1",
     "jsonwebtoken": "^9.0.2",
+    "kafkajs": "^2.2.4",
     "mediasoup": "^3.16.0",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
